--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ object-fit: cover;
 /* -----------------------page2------------------------ */
 #page2{
     display: flex;
-    justify-content:start;
+    justify-content:center;
     align-items:start;
     flex-direction: column;
     height: 100vh;
@@ -129,3 +129,17 @@ object-fit: cover;
     line-height: 1.2;
     color: #4664d8;
 }
+
+/* ------------------page3---------------------------- */
+#page3{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#page3>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+}
+
