--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ object-fit: cover;
     width: 100vw;
     background-color:#2237ca;
     color: #fff;
-    padding: 4vh 9vw;
+    padding:0 9vw;
 }
 
 #page4>h3{
@@ -166,6 +166,49 @@ object-fit: cover;
 }
 
 #page4>h1{
+    width: 98%;
+    font-size: 4vw;
+    font-weight: 300;
+    line-height: 1.2;
+    color: #4663d83b;
+}
+
+/* ----------------page5------------------------ */
+
+#page5{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#page5>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+}
+
+/* ---------------page6--------------- */
+
+#page6{
+    display: flex;
+    flex-direction: column;
+    justify-content:start;
+    align-items: start;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color:#2237ca;
+    color: #fff;
+    padding: 0 9vw;
+}
+
+#page6>h3{
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 2vw;
+}
+
+#page6>h1{
     width: 98%;
     font-size: 4vw;
     font-weight: 300;
