--- a/style.css
+++ b/style.css
@@ -297,7 +297,6 @@ object-fit: cover;
     height: 100%;
     width: 40%;
     position: relative;
-    font-family: a;
 }
 .left9>h1{
     position: absolute;
@@ -327,4 +326,35 @@ object-fit: cover;
 }
 
 /* -------------------page10----------------------- */
+
+#page10{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+.right10{
+    height: 100%;
+    width: 60%;
+    position: relative;
+    left: 40%;
+}
+.right10-inner{
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    height: 33.3%;
+    width: 100%;
+    color: #fff;
+}
+.right10-inner>h1{
+    font-size: 2vw;
+}
+.right10-inner>p{
+    margin-top: 2vw;
+    font-size: 1.3vw;
+    width: 80%;
+}
+
+/* ----------------------page11------------------------------ */
 
