--- a/style.css
+++ b/style.css
@@ -408,3 +408,28 @@ object-fit: cover;
     font-size: 2vw;
 }
 
+/* -----------------------page12---------------- */
+
+#page12{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #02268e;
+}
+.page12-inner{
+    position: absolute;
+    top: 20%;
+    right: 10%;
+    color: #fff;
+}
+.page12-inner>h1{
+    font-size: 5vw;
+    font-weight: 100;
+}
+.page12-inner>p{
+    font-size: 1.3vw;
+}
+
+/* -----------------page13----------------------- */
+
+
